update_date_21st

--- a/Frontend/uberfront/src/Components/RestaurantComponents/Uber.css
+++ b/Frontend/uberfront/src/Components/RestaurantComponents/Uber.css
@@ -108,3 +108,24 @@
   
   width: 500px;
 }
+.formc#AD
+{
+ margin-bottom: 40px;
+
+
+}
+
+/* .dishid
+{
+margin-right: 70px;
+}
+.dishname
+{
+margin-right: 100px;
+}
+
+.dishprice
+{ */
+
+/* } */
+
